<resources>
    <string name="app_name">GPA_celestinoa1_Calculator</string>
    <string name="gpa_calculator">GPA Calculator</string>
    <string name="compute_gpa">Compute GPA</string>
    <string name="grade1">Grade 1: </string>
    <string name="grade2">Grade 2: </string>
    <string name="grade3">Grade 3: </string>
    <string name="grade4">Grade 4: </string>
    <string name="grade5">Grade 5: </string>
    <string name="gpa_button">GPA</string>
</resources>