<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="28dp"
        android:text="@string/gpa_calculator"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/grade1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="184dp"
        android:layout_marginBottom="93dp"
        android:text="@string/grade1"
        android:textSize="20sp"
        android:labelFor="@id/grade1"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/grade1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="187dp"
        android:layout_marginEnd="184dp"
        android:text="@string/grade2"
        android:textSize="20sp"
        android:labelFor="@id/grade2"
        app:layout_constraintEnd_toStartOf="@+id/grade2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="184dp"
        android:text="@string/grade3"
        android:textSize="20sp"
        android:labelFor="@id/grade3"
        app:layout_constraintEnd_toStartOf="@+id/grade3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="184dp"
        android:text="@string/grade4"
        android:textSize="20sp"
        android:labelFor="@id/grade4"
        app:layout_constraintEnd_toStartOf="@+id/grade4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="184dp"
        android:text="@string/grade5"
        android:textSize="20sp"
        android:labelFor="@id/grade5"
        app:layout_constraintEnd_toStartOf="@+id/grade5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="228dp"
        android:text="@string/gpa_button"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/calculation"
        app:layout_constraintEnd_toStartOf="@+id/calculation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/calculation" />

    <EditText
        android:id="@+id/grade1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="39dp"
        android:textSize="20sp"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/grade2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/grade2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="40dp"
        android:textSize="20sp"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/grade3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/grade1"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/grade3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="43dp"
        android:textSize="20sp"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/grade4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/grade2"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/grade4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="44dp"
        android:textSize="20sp"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/grade5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/grade3"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/grade5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="88dp"
        android:textSize="20sp"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/calculation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/grade4"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/calculation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="23dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/grade5" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/compute_gpa"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculation" />

</androidx.constraintlayout.widget.ConstraintLayout>